--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </p>
   </div>
   <footer>
-    Made with ❤️ by [Your Name]
+    Made with ❤️ by Christian Tobias Marcondes
   </footer>
 </body>
 </html>
